# monitorator

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
hooks/: emit_event.py
hooks/zig/: .gitignore  build.zig
hooks/zig/src/: main.zig
scripts/: preview_sprites.py
src/monitorator/: cli.py  context_size.py  installer.py  labels.py  merger.py  models.py  notifier.py  pid_utils.py  preferences.py  scanner.py  session_prompt.py  state_store.py  tab_renamer.py  terminal_opener.py
src/monitorator/tui/: app.py  chat_dropdown.py  column_header.py  detail_panel.py  formatting.py  header_banner.py  help_screen.py  label_screen.py  session_row.py  sprites.py  styles.tcss  theme_colors.py  theme_screen.py
tests/: conftest.py  test_column_header.py  test_context_size.py  test_emit_event.py  test_formatting.py  test_header_banner.py  test_help_screen.py  test_installer.py  test_labels.py  test_merger.py  test_models.py  test_pid_utils.py  test_preferences.py  test_scanner.py  test_session_card.py  test_session_prompt.py  test_session_row.py  test_sprites.py  test_state_store.py  test_terminal_opener.py  test_theme_colors.py  test_theme_screen.py  test_tui.py
